--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-------------------------- Home Page -------------------------->
     <div class="FirstElement" id="home">
         <div class="profile-photo">
-            <img src="C:\\Users\\HP\\Desktop\\project3\\Photo.png.jpg" alt="profile picture">
+            <img src="C:\Users\HP\Desktop\project3\Photo.png.jpg" alt="profile picture">
         </div>
         <div class="profile-text">
             <h5>Hi I'm </h5><br>
@@ -48,7 +48,7 @@
             <p>Welcome to my portfolio website! I'm a Graduate  specialized  in Information Technology with a strong desire to create innovative solutions and push the boundaries of technology.With a deep love for  problem-solving, I am constantly seeking opportunities to learn and grow in the Software tech field</p>
             
             <div class="btn-group">
-                <a href="C:\\Users\\HP\\Desktop\\project3\\CV sdBhuvanaGunde.pdf" class="btn   active">Download CV</a>
+                <a href="C:\Users\HP\Desktop\project3\CV sdBhuvanaGunde.pdf" class="btn   active">Download CV</a>
                 <a href="mailto:bhuvanagunde421@gmail.com" class="btn">Contact</a>
             </div>
 
